fix: change css

--- a/aula02.html
+++ b/aula02.html
@@ -35,8 +35,10 @@
 
 </main>
 <footer>
-    <span>
+    <span style="color: red;">
         Todos os direitos reservados.
+    
+
     </span>
 
 </footer>
